<resources>

    <string name="app_name">Yahave Mondragon - ISC - 16650248</string>
    <string name="titulo_app"> --- UI Basica ---</string>

    <string name="boton_gravity">Actividades</string>
    <string name="boton_check">Casillas de verificacion</string>
    <string name="boton_texto">Cajas de texto</string>
    <string name="selector_spinner">Selectores</string>
    <string name="paso_parametros">Paso de parametros</string>
    <string name="etiquetas">Etiquetas</string>
    <string name="botones_radio">Botones de radio</string>
    <string name="cajas_de_texto">Cajas de Texto</string>
    <string name="actividades">Vista de Actividades</string>
    <string name="cadenas">Cadenas</string>
    <string name="objetos">Objetos</string>
    <string name="array_de_objetos">Array de Objetos</string>
    <string name="primitivos">Primitivos</string>

    <string name="vista_casilla_verificacion">Vista de Casilla de verificacion</string>
    <string name="vista_selectores">Vista de Selectores</string>
    <string name="vista_etiquetas">Vista de Etiquetas</string>
    <string name="vista_botones_de_redio">Vista de Botones de Radio</string>
    <string name="vista_cajas_de_texto">Vista de Cajas de Texto</string>
    <string name="txteliminar">Eliminar</string>
    <string name="txteditar">Editar</string>
    <string name="boton">Boton</string>
    <string name="txthombre">Hombre</string>
    <string name="txtmujer">Mujer</string>
    <string name="edittext">EditText:</string>
    <string name="textpassword">TextPassword:</string>
    <string name="textemailaddress">TextEmailAddress:</string>
    <string name="edittextdate">editTextDate:</string>
    <string name="edittextnumber">editTextNumber:</string>
    <string name="terminos_y_condiciones">Acepto los Terminos y condiciones</string>
    <string name="aceptar">Aceptar</string>
    <string name="enviar">Enviar</string>
    <string name="selecciona_tu_pais_de_origen">Selecciona tu pais de origen</string>
    <string name="txtusuario">Usuario</string>
    <string name="txtpassword">Password</string>
    <string name="txtlogin">Login</string>
    <string name="txtinicio">Inicio</string>
    <string name="i_am_pro_advanced"><![CDATA[I am pro º<º (Advanced)]]></string>
    <string name="login">Login</string>

    <string-array name="selector_Selector">
        <item>.:Seleccionar:.</item>
        <item>Tailandia</item>
        <item>Rusia</item>
        <item>Reino Unido</item>
        <item>Alemania</item>
        <item>Turquía</item>
        <item>Italia</item>
        <item>China</item>
        <item>España</item>
        <item>Estados Unidos</item>
        <item>Mexico</item>
    </string-array>
</resources>
