<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTituloApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_size"
        android:background="@color/colorMain"
        android:gravity="center"
        android:text="@string/titulo_app"
        android:textColor="@color/white"
        android:textSize="@dimen/titulo_size" />

    <Button
        android:id="@+id/btnActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/top_size"
        android:layout_marginTop="@dimen/top_size"
        android:layout_marginRight="@dimen/top_size"
        android:background="@color/white"
        android:color="@color/black"
        android:text="@string/boton_gravity"
        android:textAllCaps="false"
        android:textSize="@dimen/titulo_size" />

    <Button
        android:id="@+id/btnPasoParametro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/top_size"
        android:layout_marginTop="@dimen/top_size"
        android:layout_marginRight="@dimen/top_size"
        android:background="@color/white"
        android:color="@color/black"
        android:text="@string/paso_parametros"
        android:textAllCaps="false"
        android:textSize="@dimen/titulo_size" />


    <Button
        android:id="@+id/btnCasillaVerificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/top_size"
        android:layout_marginTop="@dimen/top_size"
        android:layout_marginRight="@dimen/top_size"
        android:background="@color/white"
        android:color="@color/black"
        android:text="@string/boton_check"
        android:textAllCaps="false"
        android:textSize="@dimen/titulo_size" />

    <Button
        android:id="@+id/btnSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/top_size"
        android:layout_marginTop="@dimen/top_size"
        android:layout_marginRight="@dimen/top_size"
        android:background="@color/white"
        android:color="@color/black"
        android:text="@string/selector_spinner"
        android:textAllCaps="false"
        android:textSize="@dimen/titulo_size" />

    <Button
        android:id="@+id/btnEtiqueta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/top_size"
        android:layout_marginTop="@dimen/top_size"
        android:layout_marginRight="@dimen/top_size"
        android:background="@color/white"
        android:color="@color/black"
        android:text="@string/etiquetas"
        android:textAllCaps="false"
        android:textSize="@dimen/titulo_size" />

    <Button
        android:id="@+id/btnRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/top_size"
        android:layout_marginTop="@dimen/top_size"
        android:layout_marginRight="@dimen/top_size"
        android:background="@color/white"
        android:color="@color/black"
        android:text="@string/botones_radio"
        android:textAllCaps="false"
        android:textSize="@dimen/titulo_size" />

    <Button
        android:id="@+id/btnCajaTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/top_size"
        android:layout_marginTop="@dimen/top_size"
        android:layout_marginRight="@dimen/top_size"
        android:background="@color/white"
        android:color="@color/black"
        android:text="@string/cajas_de_texto"
        android:textAllCaps="false"
        android:textSize="@dimen/titulo_size" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/top_size"
        android:layout_marginTop="@dimen/top_size"
        android:layout_marginRight="@dimen/top_size"
        android:background="@color/white"
        android:color="@color/black"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="@dimen/titulo_size" />

</LinearLayout>