<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMain"
    tools:context=".Etiqueta">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titulo_size"
        android:layout_marginBottom="@dimen/titulo_size"
        android:background="@color/colorMain"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/vista_etiquetas"
        android:textSize="@dimen/titulo_size" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtinicio"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="213dp"

        android:drawableStart="@drawable/ic_baseline_delete_forever_24"
        android:drawableLeft="@drawable/ic_baseline_delete_forever_24"

        android:drawableEnd="@drawable/ic_baseline_delete_forever_24"
        android:drawableRight="@drawable/ic_baseline_delete_forever_24"

        android:drawableTop="@drawable/ic_baseline_delete_forever_24"

        android:background="@color/blue"
        android:textColor="@color/white"
        android:color="@color/white"
        android:textColorHint="@color/white"
        />


    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:background="@color/white"
        android:textColor="@android:color/black"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:color="@color/white"

        android:drawableStart="@drawable/ic_baseline_delete_forever_24"
        android:drawableLeft="@drawable/ic_baseline_delete_forever_24"

        android:drawableEnd="@drawable/ic_baseline_delete_forever_24"
        android:drawableRight="@drawable/ic_baseline_delete_forever_24"

        android:drawableTop="@drawable/ic_baseline_delete_forever_24"


        android:hint="@string/txteliminar"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="213dp" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="@dimen/titulo_size"
        android:gravity="center"
        android:typeface="monospace" />

    <Button
        android:id="@+id/boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:drawablePadding="20dp"
        android:paddingTop="@dimen/top_size"
        android:text="@string/boton"
        android:textSize="@dimen/top_size"
        app:backgroundTint="@color/white"
        android:textColor="@android:color/black"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/abc_vector_test"
        android:background="@color/blue"
        />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Switch1"
        android:textSize="@dimen/top_size"
        android:background="@color/white"
        android:textColor="@android:color/black"
        android:gravity="center"
        />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Switch2"
        android:textSize="@dimen/top_size"
        android:background="@color/white"
        android:textColor="@android:color/black"
        android:gravity="center"
        />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Switch3"
        android:textSize="@dimen/top_size"
        android:background="@color/white"
        android:textColor="@android:color/black"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/sym_action_call" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_delete" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_input_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_view" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_share" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/presence_audio_online" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titulo_size"
        android:text="Es una colección de propiedades que especifican la apariencia y el formato de una View o ventana. Una etiqueta puede especificar propiedades, como altura, relleno, color de fuente, tamaño de fuente, color de fondo y mucho más. Ejemplo, android:background= '@color/white'"
        android:textSize="@dimen/titulo_size"
        android:textColor="@color/black"
        android:background="@color/white"
        />

</LinearLayout>